samples/_failures_safe/1761688754_bd08a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9cb55e8d.c: In function ‘main’:
./samples/SAFE/__tmp_9cb55e8d.c:143:20: error: ‘analy’ undeclared (first use in this function); did you mean ‘analyzer’?
  143 |     add_log_entry(&analy
      |                    ^~~~~
      |                    analyzer
./samples/SAFE/__tmp_9cb55e8d.c:143:20: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9cb55e8d.c:143:25: error: expected ‘)’ at end of input
  143 |     add_log_entry(&analy
      |                  ~      ^
      |                         )
./samples/SAFE/__tmp_9cb55e8d.c:143:5: error: too few arguments to function ‘add_log_entry’
  143 |     add_log_entry(&analy
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_9cb55e8d.c:58:5: note: declared here
   58 | int add_log_entry(struct LogAnalyzer *analyzer, const char *timestamp, const char *level, const char *message) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_9cb55e8d.c:143:5: error: expected declaration or statement at end of input
  143 |     add_log_entry(&analy
      |     ^~~~~~~~~~~~~
